<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/backgroundBlack"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.glennmiller.spotifystreamer.PlayerActivityFragment">

    <TextView
        android:id="@+id/artistName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/albumName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:layout_marginTop="10dp" />

    <ImageView
        android:id="@+id/albumImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="30dp"
        android:contentDescription="@string/contentDesc_AlbumImage"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/songTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:layout_marginBottom="35dp" />

    <SeekBar
        android:id="@+id/scrubBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/initialTrackPosition"
            android:id="@+id/elapsedTime"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/initialTrackPosition"
            android:id="@+id/songDuration"
            android:textColor="@color/white"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/previousButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@android:drawable/ic_media_previous"
            android:contentDescription="@string/contentDesc_Previous"
            android:layout_marginTop="10dp" />

        <ImageButton
            android:id="@+id/playButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="14dp"
            android:layout_marginLeft="14dp"
            android:src="@android:drawable/ic_media_play"
            android:background="@drawable/round_button"
            android:contentDescription="@string/contentDesc_Play"
            android:paddingLeft="5dp"/>

        <ImageButton
            android:id="@+id/pauseButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="14dp"
            android:layout_marginLeft="14dp"
            android:src="@android:drawable/ic_media_pause"
            android:background="@drawable/round_button"
            android:contentDescription="@string/contentDesc_Pause"
            android:visibility="gone" />

        <ImageButton
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginLeft="14dp"
            android:src="@android:drawable/ic_media_next"
            android:background="@android:color/transparent"
            android:contentDescription="@string/contentDesc_Next"
            android:layout_marginTop="10dp" />
    </LinearLayout>

</LinearLayout>